examples/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud-openshift
  name: nextcloud-openshift
  namespace: nextcloud
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: nextcloud-openshift
    deploymentconfig: nextcloud-openshift-s2i
  sessionAffinity: None
  type: ClusterIP
